--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-submitter/drug-submitter.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-submitter/drug-submitter.component.html
@@ -1,1 +1,45 @@
-<p>drug-submitter works!</p>
+<div class="main-container">
+    <h5 class="primary-title">Ajouter un traitment</h5>
+
+    <form name="form" [formGroup]="form">
+        <div class="row">
+            <div class="col col-md-8">
+                <div class="form-group">
+                    <div class="input-container" [ngClass]="{'is-invalid' : form.get('drug').touched && form.get('drug').invalid}">
+                        <app-search-input [submittedItem]="submittedVisitDrugDosage.drug" [placeholder]="'Recherché un medicament .. '" [searchFunction]="searchDrugFunction"></app-search-input>
+                    </div>
+                    <div class="invalid-feedback" *ngIf="form.get('drug').touched && form.get('drug').invalid">
+                        <div *ngIf="form.get('drug').errors.required">le medicament est obligé</div>
+                        <div *ngIf="form.get('drug').errors.minlength">au mois 3 characters</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-4">
+                <div class="form-group">
+                    <input type="number" placeholder="Nombre des unité" class="primary-input">
+                </div>
+            </div>
+            <div class="col col-md-8">
+                <div class="form-group">
+                    <div class="input-container" [ngClass]="{'is-invalid' : form.get('dosage').touched && form.get('dosage').invalid}">
+                        <app-search-input [submittedItem]="submittedVisitDrugDosage.dosage" [placeholder]="'Recherché une posology .. '" [searchFunction]="searchDosageFunction"></app-search-input>
+                    </div>
+                    <div class="invalid-feedback" *ngIf="form.get('dosage').touched && form.get('dosage').invalid">
+                        <div *ngIf="form.get('dosage').errors.required">la posologie est obligé</div>
+                        <div *ngIf="form.get('dosage').errors.minlength">au mois 3 characters</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-4">
+                <div class="form-group">
+                    <app-search-input [submittedItem]="submitedQSP" [placeholder]="'QSP'" [searchFunction]="searchQSPFunction"></app-search-input>
+                </div>
+            </div>
+            <div class="col col-md-12 controller">
+                <button class="secondary-input" (click)="clear()">Effacer</button>
+                <button class="primary-button" (click)="add()">Ajouter <i class="fa fa-plus"></i></button>
+            </div>
+        </div>
+    </form>
+
+</div>
