Drug submitter done

--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-submitter/drug-dosage/drug-dosage.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-submitter/drug-dosage/drug-dosage.component.html
@@ -1,1 +1,14 @@
-<p>drug-dosage works!</p>
+<div class="main-container">
+    <div class="drug">
+        <p>{{visitDrugDosage.drug.name}} <span>{{visitDrugDosage.unitNumber}}</span></p>
+
+    </div>
+
+    <div class="dosage">
+        <p>
+            {{visitDrugDosage.dosage.name}}
+            <span>{{visitDrugDosage.qsp}}</span>
+
+        </p>
+    </div>
+</div>
