--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription-drug-dosages/prescription-drug-dosages.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription-drug-dosages/prescription-drug-dosages.component.html
@@ -1,1 +1,5 @@
-<p>prescription-drug-dosages works!</p>
+<div class="main-container">
+    <div class="patient-info">
+        <app-prescription-patient-info [visit]="visit"></app-prescription-patient-info>
+    </div>
+</div>
