--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription-drug-dosages/prescription-drug-dosage/prescription-drug-dosage.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription-drug-dosages/prescription-drug-dosage/prescription-drug-dosage.component.html
@@ -1,1 +1,14 @@
-<p>prescription-drug-dosage works!</p>
+<div class="main-container">
+    <div class="drug">
+        <p>
+            <i class="fa fa-prescription-bottle-alt"></i> {{visitDrugDosage.drug.name}}
+            <span>{{visitDrugDosage.unitNumber}}</span>
+        </p>
+    </div>
+    <div class="dosage">
+        <p>
+            {{visitDrugDosage.dosage.name}}
+            <span>pendant {{visitDrugDosage.qsp}}</span>
+        </p>
+    </div>
+</div>
