--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-submitter/drug-dosage/drug-dosage.component.css
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-submitter/drug-dosage/drug-dosage.component.css
@@ -1,15 +1,14 @@
-p span {
-    float: right;
-}
-
 p {
     display: block;
+}
+
+.drug span {
+    float: right;
 }
 
 .drug {
     color: #212121;
     font-weight: bold;
-    margin-bottom: 16px;
 }
 
 .dosage {
@@ -17,11 +16,13 @@ p {
 }
 
 .main-container {
-    padding: 8px 16px;
     padding-bottom: 4px;
     border-radius: 16px;
     position: relative;
 }
+
+
+/*
 
 .delete {
     position: absolute;
@@ -33,19 +34,43 @@ p {
     display: none;
     cursor: pointer;
 }
+*/
 
-.main-container:hover .delete {
-    display: block;
+.control-container {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    opacity: 0;
+    transition-duration: 0.5s;
 }
 
-.delete:hover {
-    text-decoration: underline;
+.main-container:hover .control-container {
+    opacity: 1;
 }
 
-.delete i {
+.control-container span {
+    display: inline-block;
+    margin-left: 8px;
+    padding: 4px 8px;
+    color: white;
+    font-size: 12px;
+    border-radius: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.control-container span i {
     margin-left: 4px;
 }
 
-.main-container:hover {
-    background-color: #eeeeee;
+.control-container span.delete {
+    background: rgb(254, 101, 85);
+}
+
+.control-container span.edit {
+    background: rgb(38, 94, 215);
+}
+
+.dosage {
+    position: relative;
 }
