--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/drug-dosages-library.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/drug-dosages-library.component.html
@@ -1,13 +1,11 @@
 <div class="main-container">
-    <div class="search-header stretch-container">
+    <div class="search-header">
         <input type="text" placeholder="Recherché un Traitment" [(ngModel)]="name" class="primary-input">
-        <div class="center-v">
-            <button>Ajouter <i class="fa fa-plus"></i></button>
-        </div>
+
     </div>
     <div class="body">
         <div class="prescription-model" *ngFor="let prescriptionModel of prescriptionModels">
-            <app-prescription-model></app-prescription-model>
+            <app-prescription-model (useEvent)="use($event)" [prescriptionModel]="prescriptionModel"></app-prescription-model>
         </div>
     </div>
 </div>
