--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/prescription-model/prescription-model.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/prescription-model/prescription-model.component.html
@@ -1,1 +1,20 @@
-<p>prescription-model works!</p>
+<div class="main-container">
+    <div class="name">
+        <p (click)="expand = !expand">
+            <i class="fa fa-chevron-down" *ngIf="!expand"></i>
+            <i class="fa fa-chevron-up" *ngIf="expand"></i> {{prescriptionModel.name}}
+        </p>
+        <div class="control">
+            <span class="secondary-button" (click)="useEvent.emit (prescriptionModel)">utiliser <i class="fa fa-check"></i></span>
+            <i class="fa fa-edit">
+
+            </i>
+            <i class="fa fa-trash"></i>
+        </div>
+    </div>
+    <div class="drug-dosages-list" *ngIf="expand">
+        <div class="drug-dosage" *ngFor="let drugDosage of prescriptionModel.drugDosages">
+            <app-drug-dosage [visitDrugDosage]="drugDosage" [control]="false"></app-drug-dosage>
+        </div>
+    </div>
+</div>
