--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/drug-dosages-library.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/drug-dosages-library.component.html
@@ -8,4 +8,7 @@
             <app-prescription-model (useEvent)="use($event)" [prescriptionModel]="prescriptionModel"></app-prescription-model>
         </div>
     </div>
+    <div class="footer">
+        <a>Si le model de traitment n'existe pas creé le <i class="fa fa-plus"></i></a>
+    </div>
 </div>
