PrescriptionModel Submitter done

--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/drug-dosages-library.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/drug-dosages-library.component.html
@@ -9,6 +9,6 @@
         </div>
     </div>
     <div class="footer">
-        <a>Si le model de traitment n'existe pas creé le <i class="fa fa-plus"></i></a>
+        <a (click)="openSubmitter()">Si le model de traitment n'existe pas creé le <i class="fa fa-plus"></i></a>
     </div>
 </div>
