--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/prescription-model/prescription-model.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/prescription-model/prescription-model.component.html
@@ -6,9 +6,7 @@
         </p>
         <div class="control">
             <span class="secondary-button" (click)="useEvent.emit (prescriptionModel)">utiliser <i class="fa fa-check"></i></span>
-            <i class="fa fa-edit">
-
-            </i>
+            <i class="fa fa-edit" (click)="editEvent.emit ( prescriptionModel )"></i>
             <i class="fa fa-trash"></i>
         </div>
     </div>
