--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/prescription-model/prescription-model.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/prescription-model/prescription-model.component.html
@@ -7,7 +7,7 @@
         <div class="control">
             <span class="secondary-button" (click)="useEvent.emit (prescriptionModel)">utiliser <i class="fa fa-check"></i></span>
             <i class="fa fa-edit" (click)="editEvent.emit ( prescriptionModel )"></i>
-            <i class="fa fa-trash"></i>
+            <i class="fa fa-trash" (click)="deleteEvent.emit(prescriptionModel)"></i>
         </div>
     </div>
     <div class="drug-dosages-list" *ngIf="expand">
