--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/prescription-model-submitter/prescription-model-submitter.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/drug-dosages-library/prescription-model-submitter/prescription-model-submitter.component.html
@@ -3,12 +3,11 @@
         <app-drug-submitter [visitDrugDosages]="prescriptionModel.drugDosages"></app-drug-submitter>
         <div class="row">
             <div class="col col-md-8">
-                <input type="text" [(ngModel)]="prescriptionModel.name" placeholder="Nom de traitment" class="primary-input">
+                <input type="text" [(ngModel)]="prescriptionModel.name" placeholder="Nom de traitement" class="primary-input">
             </div>
             <div class="col col-md-4">
                 <button class="primary-button" *ngIf="!isEdit" (click)="add()">Ajouter <i class="fa fa-plus"></i></button>
                 <button class="primary-button" *ngIf="isEdit" (click)="edit()">Modifier <i class="fa fa-edit"></i></button>
-
             </div>
 
         </div>
